tests/scan/fixtures/validation/negative/clean_go_clean-config-reader/clean-config-reader.go
// Package clean-config-reader is a clean Go module.
package clean-config-reader

func Hello() string { return "hello" }
